# miu_memory_integrity_utilities

./: README.md
frame-pass/: Framer.cpp  Framer_BACKUP.cpp  InitializePasses.h  LTOCodeGenerator.cpp  LinkAllPasses.h  MemfisPass.cpp  PassManagerBuilder.cpp
frame-pass/FramerDelSafeAccess/: FramerDelSafeAccess.cpp
frame-pass/FramerLoopOpt/: CMakeLists.txt  Framer.cpp  FramerLoopOpt.cpp
frame-pass/frame-pass/: CMakeLists.txt  Framer.cpp  FramerBackup.cpp
frame-pass/include/: .Framers.h.swp  Framer.h  FramerBackup.h  FramerDelSafeAccess.h  FramerLoopOpt.h  Framers.h  FramersBackup.h
frame-pass/static_lib/frame-hooks/: framerdef.c  framertypes.h  hook_globals_defs.c  usershook.h  (+3 more)
frame-pass2019/: README.md
frame-pass2019/FramerDelSafeAccess/: FramerDelSafeAccess.cpp  FramerDelSafeAccess.h
frame-pass2019/FramerLoopOpt/: Framer.cpp  FramerLoopOpt.cpp
frame-pass2019/SolitaryFramer/: CMakeLists.txt  Framer.h  SolitaryFramer.cpp  SolitaryFramer.h
frame-pass2019/lib/: malloc.h  mallocfamily.c  xor.c
frame-pass2019/llvm_mod/: PassManagerBuilder.cpp
frame-pass2019/transformation/: Framer.cpp
frame2020/: README.md
frame2020/lib/: framerdef.c  framertypes.h  hook_globals_defs.c  mallocfamily.c  usershook.h  wrappers_version2.c
frame2020/pass/: CMakeLists.txt  Framer.cpp  Framer.h  Framers.h
lib/: .README.md.swp  README.md  framertypes.h  hook_globals_defs.c  lnt_fwd.sh  lntpreprocess.sh  spec.sh  usershook.h  wrappers_version2.c
obfuscation/: README.md
obfuscation/ObfuscationPass/: CMakeLists.txt  Obfuscation.cpp
obfuscation/include/: Obfuscation.h
